--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-
 <app-score-form></app-score-form>
-
 <router-outlet></router-outlet>
+
+<footer>
+    <p>
+        <small>&copy; {{currentYear}} | MJScore. All Rights Reserved.</small>
+    </p>
+</footer>
