--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+footer{
+    position: absolute;
+    bottom: 0px;
+    height: 45px;
+    border-top: 1px solid #a2a2a2;
+    width: 100%;
+    text-align: center;
+    background-color: #a2a2a2;
+}
