Add favicon and applied localStorage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <router-outlet></router-outlet>
 
 <footer>
-    <p>
+    <div class="display-center footer-text">
         <small>&copy; {{currentYear}} | MJScore. All Rights Reserved.</small>
-    </p>
+    </div>
 </footer>
