--- a/src/app/score-form/score-form.component.html
+++ b/src/app/score-form/score-form.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container table-box">
   <h2>Mahjong Game Score</h2>
   <table class="table table-bordered">
     <thead>
