--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    margin-bottom: 45px;
+}
+
 footer{
     position: absolute;
     bottom: 0px;
@@ -7,4 +15,14 @@ footer{
     width: 100%;
     text-align: center;
     background-color: #a2a2a2;
+}
+
+.footer-text{
+    color: #ffffff;
+}
+.display-center{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
