--- a/src/styles.less
+++ b/src/styles.less
@@ -20,9 +20,23 @@ footer{
 .footer-text{
     color: #ffffff;
 }
+
+.header-bar{
+    display: inline-block;
+    width: 100%;
+
+    .right-bar{
+        float: right;
+    }
+}
+
 .display-center{
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.clickable{
+    cursor: pointer;
 }
