Add background img and code refactor

--- a/src/styles.less
+++ b/src/styles.less
@@ -40,3 +40,15 @@ footer{
 .clickable{
     cursor: pointer;
 }
+
+body::after {
+    content: "";
+    background: url(/assets/images/800.jpg) ;
+    opacity: 0.1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+  }
