background image rename

--- a/src/styles.less
+++ b/src/styles.less
@@ -43,7 +43,7 @@ footer{
 
 body::after {
     content: "";
-    background: url(/assets/images/800.jpg) ;
+    background: url(/assets/images/mj-background.jpg) ;
     opacity: 0.1;
     top: 0;
     left: 0;
