--- a/src/app/score-form/score-form.component.less
+++ b/src/app/score-form/score-form.component.less
@@ -2,3 +2,9 @@
     margin-top: 20px;
     margin-bottom: 60px;
 }
+
+.save-button{
+    position: relative;
+    float: right;
+    margin-bottom: 60px;
+}
