--- a/src/styles.less
+++ b/src/styles.less
@@ -41,9 +41,19 @@ footer{
     cursor: pointer;
 }
 
+.error-msg {
+    width: 100%;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #dc3545;
+}
+
+.center{
+    text-align: center;
+}
 body::after {
     content: "";
-    background: url(/assets/images/800.jpg) ;
+    background: url(/assets/images/mj-background.jpg) ;
     opacity: 0.1;
     top: 0;
     left: 0;
@@ -51,4 +61,4 @@ body::after {
     right: 0;
     position: absolute;
     z-index: -1;   
-  }
+}
