--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 
 <footer>
     <div class="display-center footer-text">
-        <small>&copy; {{currentYear}} | MJScore. All Rights Reserved.</small>
+        <small>&copy; {{currentYear}} | MJScoring.com All Rights Reserved.</small>
     </div>
 </footer>
